--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ secrets.toml
 unicke-firebase-adminsdk-l7s4j-d04bf19ccb.json
 unicke-e1319c4c88c6.json
 oldversion.py
+functions/
 
 # OS-specific files
 .DS_Store
@@ -10,3 +11,6 @@ google-cloud-sdk/
 *.pyc
 __pycache__/
 *.p12unicke-e1319c4c88c6.json
+
+node_modules/
+.env
