--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 secrets.toml
-unicke-firebase-adminsdk-l7s4j-d04bf19ccb.json
-unicke-e1319c4c88c6.json
-oldversion.py
+setup/service_account_key.json
+config/firebase.json
+archive/
 functions/
 
 # OS-specific files
