--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 secrets.toml
 setup/service_account_key.json
 setup/temp_org_setup.py
+setup/nuginy_org_setup.py
 config/firebase.json
 archive/
 functions/
